cmake_minimum_required(VERSION 3.5)
project(offer)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SOURCE_FILES main.cpp 二维数组中的查找.h 替换空格.h ListNode.h TreeNode.h 从尾到头打印链表.h 重建二叉树.h 用两个栈实现队列.h 旋转数组的最小数字.h 斐波那契数列.h 跳台阶.h 变态跳台阶.h 矩形覆盖.h 二进制中1的个数.h 数值的整数次方.h 调整数组顺序使奇数位于偶数前面.h 链表中倒数第k个结点.h 反转链表.h 合并两个排序的链表.h 树的子结构.h 二叉树的镜像.h 顺时针打印矩阵.h 包含min函数的栈.h 栈的压入、弹出序列.h 从上往下打印二叉树.h 二叉搜索树的后序遍历序列.h 二叉树中和为某一值的路径.h 复杂链表的复制.h 二叉搜索树与双向链表.h 字符串的排列.h 数组中出现次数超过一半的数字.h 最小的K个数.h 连续子数组的最大和.h 整数中1出现的次数.h 把数组排成最小的数.h 丑数.h 第一个只出现一次的字符.h 数组中的逆序对.h 两个链表的第一个公共结点.h 数字在排序数组中出现的次数.h 二叉树的深度.h 平衡二叉树.h 数组中只出现一次的数字.h 和为S的连续正数序列.h 和为S的两个数字.h 左旋转字符串.h 翻转单词顺序列.h 扑克牌顺子.h "孩子们的游戏(圆圈中最后剩下的数).h" 求1+2+3+...+n.h 不用加减乘除做加法.h 把字符串转换成整数.h 数组中重复的数字.h 构建乘积数组.h 正则表达式匹配.h 表示数值的字符串.h 字符流中第一个不重复的字符.h 链表中环的入口结点.h 删除链表中重复的结点.h 二叉树的下一个结点.h 对称的二叉树.h 按之字形顺序打印二叉树.h 把二叉树打印成多行.h 序列化二叉树.h 二叉搜索树的第k个结点.h 数据流中的中位数.h 滑动窗口的最大值.h 矩阵中的路径.h 机器人的运动范围.h)
add_executable(offer ${SOURCE_FILES})